# peopleAI

./: .gitignore  Procfile  README.md  build.sh  chat.html  index.html  manage.py  pyproject.toml  render.yaml  requirements.txt
bible_bffs/: asgi.py  db.sqlite3  settings.py  urls.py  wsgi.py
bible_bffs/bible_bffs/: settings.py  urls.py
bible_bffs/chat/: admin.py  urls.py  views.py
bible_bffs/chat/migrations/: 0001_initial.py
bible_bffs/chat/static/chat/: output.css
bible_bffs/chat/templates/chat/: character_list.html  chat.html
chat/: admin.py  models.py  urls.py  views.py
chat/migrations/: 0001_initial.py
chat/static/chat/: output.css
chat/templates/chat/: base.html  character_list.html  chat.html
peopleAI/: asgi.py  settings.py  urls.py  wsgi.py
