[tool.poetry]
name = "bible-bff"
version = "0.1.0"
description = "Chat with Biblical Characters"
authors = ["Ugochukwu Onyebuchi <pyvinci@gmail.com>"]
readme = "README.md"
packages = [{include = "bible_bff"}]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1.7"
dj-database-url = "^1.2.0"
psycopg2-binary = "^2.9.5"
gunicorn = "^20.1.0"
whitenoise = {extras = ["brotli"], version = "^6.4.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
